<resources>
    <string name="app_name" translate="false">Common Data Service</string>
    <string name="service_name" translatable="false">CDS Service</string>
    <string name="cds_common_info" translatable="false">CDS Information</string>
    <string name="cds_wifi_info" translatable="false">Wi-Fi Information</string>
    <string name="cds_radio_info" translatable="false">Radio Information</string>
    <string name="cds_radio_menu_info" translatable="false">Phone Information</string>
    <string name="cds_common_tab_framework" translatable="false">CDS Framework Information</string>
    <string name="cds_common_tab_native" translatable="false">CDS Native Information</string>
    <string name="cds_tether_info" translatable="false">CDS Tether Information</string>
    <string name="cds_traffic_info" translatable="false">CDS Traffic Information</string>
    <string name="cds_connectivity_info" translatable="false">Connectivity Server</string>
    <string name="cds_connectivity_mtu" translatable="false">CDS MTU Configuration</string>
    <string name="cds_utility_info" translatable="false">Network Utility</string>
    <string name="cds_pdp_info" translatable="false">Multiple APN</string>
    <string name="cds_socket_info" translatable="false">Listening Socket Information</string>
    <string name="cds_ds_info" translatable="false">CDS Background Data Usage</string>
    <string name="btn_refresh" translate="false">Refresh</string>
    <string name="btn_snapshot" translate="false">Snapshot</string>
    <string name="btn_exit" translate="false">Exit</string>
    <string name="btn_clear" translate="false">Clear</string>
    <string name="warning" translate="false">Warning</string>
    <string name="announce" translate="false">[Only record background data]</string>
    <string name="network_utility_hint" translate="false">[Support SHELL/PING/DNS/HTTP commands]</string>
    <string name="sys_property_hint" translate="false">[Set/Get System Property - AID_SYSTEM]</string>
    <string name="sys_get_button" translate="false">Get</string>
    <string name="sys_set_button" translate="false">Set</string>
    <string name="multi_apn_hint" translate="false">[Start/Stop APN data connections]</string>
    <string name="connectivity_inet_hint" translate="false">[Report INET connection]</string>
    <string name="connectivity_change_delay" translate="false">[Connectivity Intent Change Delay - Unit: ms]</string>
    <string name="connectivity_captive_portal" translate="false">[Captive portal detection setting]</string>
    <string name="connectivity_captive_portal_setting" translate="false">Captive portal detection</string>
    <string name="tethering_test_label" translate="false">Tethering UDP testing</string>
    <string name="active_network_info_label" translate="false">Active Network Info</string>
    <string name="active_link_properties_label" translate="false">Active Network Link Properties</string>
    <string name="active_network_quota_info_label" translate="false">Active Network Quota information</string>
    <string name="network_infos_label" translate="false">Network Information List</string>
    <string name="network_policy_label" translate="false">Network Policy</string>
    <string name="network_list_label" translate="false">Network Interface List</string>
    <string name="network_config_label" translate="false">Network Config</string>
    <string name="ip_route_label" translate="false">IP Routing Table</string>
    <string name="net_stat_label" translate="false">Active IP connections</string>
    <string name="tether_info_label" translate="false">Tether information</string>
    <string name="traffic_info_label" translate="false">Traffic information</string>
    <string name="traffic_mobile_info_label" translate="false">Mobile Traffic Information</string>
    <string name="ccmni0_info_label" translate="false">ccmni0 information</string>
    <string name="ccmni1_info_label" translate="false">ccmni1 information</string>
    <string name="ccmni2_info_label" translate="false">ccmni2 information</string>
    <string name="wlan_info_label" translate="false">wlan information (valid only if Wi-Fi is on)</string>
    <string name="wifi_update" translatable="false">Refresh Status</string>
    <string name="wifi_state_label" translatable="false">Wi-Fi state:</string>
    <string name="network_state_label" translatable="false">Network state:</string>
    <string name="supplicant_state_label" translatable="false">Supplicant state:</string>
    <string name="rssi_label" translatable="false">RSSI:</string>
    <string name="bssid_label" translatable="false">BSSID:</string>
    <string name="ssid_label" translatable="false">SSID:</string>
    <string name="hidden_ssid_label" translatable="false">Hidden SSID:</string>
    <string name="ipaddr_label" translatable="false">IPaddr:</string>
    <string name="macaddr_label" translatable="false">MAC addr:</string>
    <string name="networkid_label" translatable="false">Network ID:</string>
    <string name="link_speed_label" translatable="false">Link speed:</string>
    <string name="scan_list_label" translatable="false">Scan results:</string>
    <string name="mac_edit_label" translatable="false">Random MAC Address:</string>
    <string name="mac_update" translatable="false">Update Mac</string>
    <string name="system_property_label" translatable="false">System properties:</string>
    <string name="poorlink_profiling_on">Poor Link Profiling on screen</string>
    <string name="poorlink_detect_good_threshold" translatable="false">Good Link Threshold</string>
    <string name="poorlink_detect_bad_threshold" translatable="false">Poor Link Threshold</string>
    <string name="poorlinkupdate">Update Poor Link</string>
    <string name="wifi_state_disabling" translatable="false">Disabling</string>
    <string name="wifi_state_disabled" translatable="false">Disabled</string>
    <string name="wifi_state_enabling" translatable="false">Enabling</string>
    <string name="wifi_state_enabled" translatable="false">Enabled</string>
    <string name="wifi_state_unknown" translatable="false">Unknown</string>
    <string name="na_string" translatable="false">N/A</string>
    <string name="unknown_string" translatable="false">Unknown</string>
    <string name="loading_string" translatable="false">Loading</string>
    <string name="wifi_scan" translatable="false">Wi-Fi Scan</string>
    <string name="google" translatable="false">Google</string>
    <string name="dns1" translatable="false">DNS 1</string>
    <string name="dns2" translatable="false">DNS 2</string>
    <string name="radio_info_signal_location_label">Location:</string>
    <string name="radio_info_neighboring_location_label">Neighboring CID:</string>
    <string name="radio_info_data_attempts_label">Data attempts:</string>
    <string name="Send" translate="false">SEND AT COMMAND</string>
    <string name="Start" translate="false">START</string>
    <string name="Add" translate="false">ROUTE ADD</string>
    <string name="Stop" translate="false">STOP</string>
    <string name="Report" translate="false">Report Inet Condition</string>
    <string name="radio_info_gprs_attach_service_label">GPRS PS service:</string>
    <string name="radio_info_gprs_service_label">Default pdp status:</string>
    <string name="radio_info_roaming_label">Roaming:</string>
    <string name="radio_info_imei_label">IMEI:</string>
    <string name="radio_info_imsi_label">IMSI:</string>
    <string name="radio_info_ppp_resets_label">Number of PPP reset since boot:</string>
    <string name="radio_info_gsm_disconnects_label">GSM disconnects:</string>
    <string name="radio_info_current_network_label">Current network:</string>
    <string name="radio_info_data_successes_label">Data successes:</string>
    <string name="radio_info_ppp_received_label">PPP received:</string>
    <string name="radio_info_gsm_service_label">GSM service:</string>
    <string name="radio_info_signal_strength_label">Signal strength:</string>
    <string name="radio_info_call_status_label">Call status:</string>
    <string name="radio_info_ppp_sent_label">PPP sent:</string>
    <string name="radio_info_radio_resets_label">Radio resets:</string>
    <string name="radio_info_phone_number_label">Phone number:</string>
    <string name="radio_info_network_type_label">Network type:</string>
    <string name="radio_info_ping_ipaddr">Ping IpAddr:</string>
    <string name="radio_info_ping_hostname">Ping Hostname:</string>
    <string name="radio_info_http_client_test">HTTP Client test:</string>
    <string name="ping_test_label">Run Ping Test</string>
    <string name="run" translatable="false">Run</string>
    <string name="radio_state_label" translatable="false">Radio state:</string>
    <string name="sim_state_label" translatable="false">SIM state:</string>
    <string name="radio_info_service_state_label" translatable="false">Service state:</string>
    <string name="radioInfo_unknown" translatable="false">unknown</string>
    <string name="radioInfo_display_packets" translatable="false">pkts</string>
    <string name="radioInfo_display_bytes" translatable="false">bytes</string>
    <string name="radioInfo_display_dbm" translatable="false">dBm</string>
    <string name="radioInfo_display_asu" translatable="false">asu</string>
    <string name="radioInfo_lac" translatable="false">LAC</string>
    <string name="radioInfo_cid" translatable="false">CID</string>
    <string name="radioInfo_service_in" translatable="false">In service</string>
    <string name="radioInfo_service_out" translatable="false">Out of service</string>
    <string name="radioInfo_service_emergency" translatable="false">Emergency calls only</string>
    <string name="radioInfo_service_off" translatable="false">Radio off</string>
    <string name="radioInfo_service_on" translatable="false">Radio on</string>
    <string name="radioInfo_phone_idle"  translatable="false">Idle</string>
    <string name="radioInfo_phone_ringing"  translatable="false">Ringing</string>
    <string name="radioInfo_phone_offhook"  translatable="false">Call in progress</string>
    <string name="radioInfo_data_disconnected" translatable="false">Disconnected</string>
    <string name="radioInfo_data_connecting" translatable="false">Connecting</string>
    <string name="radioInfo_data_connected" translatable="false">Connected</string>
    <string name="radioInfo_data_suspended" translatable="false">Suspended</string>
    <string name="radioInfo_roaming_in" translatable="false">Roaming</string>
    <string name="radioInfo_roaming_not" translatable="false">Not roaming</string>
    <string name="mtu_default_value" translatable="false">1500</string>
    <string name="mtu_name" translatable="false">Configure MTU Size for\r\n Network Interface</string>
    <string name="mtu_configure_btn" translatable="false">MTU SIZE CONFIGURE</string>
    <string name="mobileOnly" translatable="false">Mobile network interface only</string>
    <string name="interfaceUp" translatable="false">Interface Up only</string>
    <string name="ps_data_flow" translatable="false">PS Data Control</string>
    <string name="btn_enable_fw" translatable="false">Enable Firewall</string>
    <string name="btn_disable_fw" translatable="false">Disable Firewall</string>
    <string name="ps_fw_rule" translatable="false">Firewall status:</string>
    <string name="btn_ps_enable" translatable="false">Enable</string>
    <string name="btn_ps_disable" translatable="false">Disable</string>
    <string name="ps_fw_app_rule_label" translatable="false">App firewall status</string>
    <string name="ps_fw_app_agps" translatable="false">AGPS</string>
    <string name="ps_fw_app_shell" translatable="false">SHELL</string>
    <string name="btn_enable_udp" translatable="false">Enable USB testing</string>
    <string name="btn_disable_udp" translatable="false">Diable USB testing</string>
</resources>