<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    
    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mtu_name"
         />

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#0000FF"></View>
    <TextView
        android:id="@+id/interfaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />       

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#0000FF"></View>

    <Spinner
        android:id="@+id/spinnerInterfaceName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    
	<View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
    
    <EditText
        android:id="@+id/mtuValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:text="@string/mtu_default_value">
        <requestFocus />
    </EditText>

      
    <Button
        android:id="@+id/mtuConfigure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mtu_configure_btn" />

        <CheckBox
        android:id="@+id/mobileOnlyChk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mobileOnly" /> 

        <CheckBox
        android:id="@+id/interfaceUpChk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/interfaceUp" />         
        
	<View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

           
</LinearLayout>