<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   
    <LinearLayout  style="@style/info_layout" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:screenOrientation="portrait" >
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_inet_hint" />

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         style="@style/info_layout" >
            <Spinner
                android:id="@+id/connTypeSpinnner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                
            <EditText
                android:id="@+id/ReportPercent" 
                android:inputType="phone"
                android:digits="1234567890"
                android:maxLength="3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         style="@style/info_layout" >    
            <Button android:id="@+id/Report"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:text="@string/Report"
            />
     </LinearLayout>
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_change_delay" />
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>    
    <LinearLayout
        style="@style/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <EditText
        android:id="@+id/conn_change_delay"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    />
    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys_set_button" />
    </LinearLayout>

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    
     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_captive_portal" />
    
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    <CheckBox
        android:id="@+id/conn_captive_portal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connectivity_captive_portal_setting"
    />

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

     <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/tethering_test_label" />
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    <EditText
        android:id="@+id/tether_udp_test_ipaddr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:maxLength="16"
    />

    <Button
        android:id="@+id/tetherEnableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_enable_udp" />

    <Button
        android:id="@+id/tetherDisableBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_disable_udp" />


    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    </LinearLayout>
</ScrollView>
    