<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        style="@style/info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/network_utility_hint" />

    <AutoCompleteTextView
        android:id="@+id/cmdLine"
        style="@style/info_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions"
        >
    </AutoCompleteTextView>

    <LinearLayout
        style="@style/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/runBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/run" />

    <Spinner
        android:id="@+id/cmdSpinnner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>

    <TextView        
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sys_property_hint" />
        
    <EditText
        android:id="@+id/syspropName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <EditText
        android:id="@+id/syspropValue"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    
    <LinearLayout
        style="@style/info_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/setBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys_set_button" />

    <Button
        android:id="@+id/getBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sys_get_button" />
        
    <Spinner
        android:id="@+id/sysPropSpinnner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/outputText"
        style="@style/info_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text|textLongMessage|textMultiLine|textNoSuggestions" />
        
    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
        
    </LinearLayout>
</ScrollView>    