<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   
    <LinearLayout  style="@style/info_layout" xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:screenOrientation="portrait" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/multi_apn_hint" />

    <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
              
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         style="@style/info_layout" >
            <Spinner
                android:id="@+id/apnTypeSpinnner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
                
            <Button android:id="@+id/Start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:text="@string/Start"
            />
            
            <Button android:id="@+id/Stop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:text="@string/Stop"
            />            
     </LinearLayout>         
            <EditText
                android:id="@+id/HostAddress" 
                android:layout_width="fill_parent"
                android:inputType="textNoSuggestions"
                android:layout_height="wrap_content"
            />
                
            <Button android:id="@+id/Add"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textNoSuggestions"
                android:text="@string/Add"
            /> 

        <View android:layout_height="1dip" android:layout_width="fill_parent" android:background="#777777"></View>
            
            <TextView
                android:id="@+id/outputText"
                style="@style/info_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textLongMessage|textMultiLine|textNoSuggestions" />    
    </LinearLayout>
</ScrollView>
    